Closed
Bug 259956
Opened 21 years ago
Closed 21 years ago
Interoperability problem with iCal: Cause unknown [\r\r\n line ends]
Categories
(Calendar :: Internal Components, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: s.wilson, Assigned: gray)
References
Details
Attachments
(1 file)
10.96 KB,
text/calendar
|
Details |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-us) AppleWebKit/125.4.2 (KHTML, like Gecko) Safari/125.9
Build Identifier:
The .ics file generated by Sunbird is considered to be corrupted by Apple iCal 1.5.2 (v638). (will attach)
Reproducible: Always
Steps to Reproduce:
1. Place the attached .ics on a WebDAV server
2. Run iCal
3. Subscribe
Actual Results:
iCal generates the message:
Downloaded file is not a calendar or file is corrupted on server.
The calendar may be just in a middle of an update so retrying later may fix the problem.
Expected Results:
The calendar should have updated correctly in iCal; at this point it is unclear whether Sunbird or iCal is
at fault.
Reporter | ||
Comment 1•21 years ago
|
||
Note email addresses mangled for privacy.
Comment 2•21 years ago
|
||
What version of Sunbird and what platform was this file generated on?
The linefeeds are incorrect. Instead of CRLF most lines have CRCRLF.
This might be a regression caused by the fix to bug 254356
Comment 3•21 years ago
|
||
Never mind. Found the cause. On windows, ics files are opened as O_TEXT not
O_BINARY so each \n is written as \r\n causing the CRCRLF (\r\r\n) entry.
This change makes sure the file is opened in binary mode on windows:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fother-licenses%2Flibical&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-09-17+13%3A44&maxdate=2004-09-17+13%3A44&cvsroot=%2Fcvsroot
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 261049 has been marked as a duplicate of this bug. ***
added [\r\r\n line ends] to summary to make it easier to find this.
Summary: Interoperability problem with iCal: Cause unknown → Interoperability problem with iCal: Cause unknown [\r\r\n line ends]
*** Bug 264280 has been marked as a duplicate of this bug. ***
Updated•19 years ago
|
QA Contact: gurganbl → libical
Updated•19 years ago
|
Component: libical → Internal Components
Comment 7•19 years ago
|
||
The bugspam monkeys have been set free and are feeding on Calendar :: Internal Components. Be afraid for your sanity!
QA Contact: libical → base
You need to log in
before you can comment on or make changes to this bug.
Description
•