Open ics files in binary mode so \n is not saved as \r\n Fixes bug 259956:Interoperability problem with iCal: Cause unknown